Added a "return object" button appear when the object goes offscreen.
Added add new panel "Friction", with radio buttons side by side each other "On", "Off" after the "Vectors" panel
Made friction off by default in every tab
Moved viewport north in Work/Energy/Force graphs tab so all series controls are visible
Limited to one firedog at a time.
# 1.03.32 (34332) Aug 19, 2009
Fixed: When there is a lot of recorded chart data, the chart maximize/minimize buttons can go offscreen, see screenshot.
Fixed: Vertical slider label should be centered in the graphs tabs
Fixed: Domain chart labels go off the screen for the work/energy chart when both charts are enabled
Fixed: All work/energy series are currently labeled with an "E", some should be labeled with a "W"
Fixed: Make Fg label appear on the arrow instead of below it.
Fixed: Problems when I am using the force slider and want to apply a force opposing the direction of motion. The slider jumps back to a positive/negative value because the direction of motion has changed; positive force should always be up and to the right
Fixed: Make sure the displayed forces are not dotted into the direction of motion, but rather in the direction of the ramp at that point.
Fixed: Reduce vertical padding of chart control panel items
Fixed: New renderer (paintimmediately) has problems when switching tabs, leaves artifacts
Improved layout for chart control panel
Added feature: The ramp turns red when it heats up, as a cue of what is happening (thermal energy absorbed in ramp).
Fixed: When there is a collision with a wall, this energy currently goes into thermal energy of the object; perhaps it should be kept separately
Fixed: Ramp segments should be treated separately with respect to their thermal energies (for showing as red)
Fixed: Water drops appear as black boxes
Added clear heat button that appears when the ramp heats up
Made ramp turn red when heated
# 1.03.31 (34053) Aug 12, 2009
Removed unused images