@@ -1,3 +1,4 @@
+Made object position slider control properly return object from crash mode
 Added a "return object" button appear when the object goes offscreen.
 Added add new panel "Friction", with radio buttons side by side each other "On", "Off" after the "Vectors" panel
 Made friction off by default in every tab
